--- a/chatapp_ferolin/pubspec.yaml
+++ b/chatapp_ferolin/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   flutter_signin_button: ^1.1.0
   email_validator: ^1.0.0
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
+  provider: ^4.3.2+3
 
 
   # The following adds the Cupertino Icons font to your application.
