--- a/chatapp_ferolin/pubspec.yaml
+++ b/chatapp_ferolin/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.18.4+1
   cloud_firestore: ^0.14.4
   provider: ^4.3.2+3
+  shared_preferences: ^0.5.12+4
 
 
   # The following adds the Cupertino Icons font to your application.
