--- a/chatapp_ferolin/pubspec.yaml
+++ b/chatapp_ferolin/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.14.4
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
+  random_string: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
