--- a/chatapp_ferolin/pubspec.yaml
+++ b/chatapp_ferolin/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^4.3.2+3
   shared_preferences: ^0.5.12+4
   random_string: ^2.1.0
+  google_sign_in: ^4.5.9
 
 
   # The following adds the Cupertino Icons font to your application.
