--- a/chatapp_ferolin/pubspec.yaml
+++ b/chatapp_ferolin/pubspec.yaml
@@ -49,7 +49,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  image_path: 'assets/images/icons.png'
+  image_path: 'assets/images/logoIconCircle.png'
   android: true
   ios: true
 
